--- a/src/app/taform/taform.component.css
+++ b/src/app/taform/taform.component.css
@@ -1,5 +1,6 @@
 .mat-form-field {
     margin-top: 16px;
+    width: 100%;
   }
 
   h1{
@@ -8,3 +9,36 @@
   .mat-radio-button ~ .mat-radio-button {
     margin-left: 246px;
   }
+
+  .mat-typography p {
+    margin: 0 0 0px;
+}
+
+:host ::ng-deep .mat-radio-container{
+  height: 30px;
+  width: 30px;
+}
+:host ::ng-deep .mat-radio-outer-circle{
+  height: 30px;
+  width: 30px;
+}
+:host ::ng-deep .mat-radio-inner-circle{
+  height: 30px;
+  width: 30px;
+}
+:host ::ng-deep .mat-radio-button .mat-radio-ripple{
+  height: 20px; /*double of your required circle radius*/
+  width: 20px;  /*double of your required circle radius*/
+  left: calc(50% - 10px); /*'10px'-same as your required circle radius*/
+  top: calc(50% - 10px); /*'10px'-same as your required circle radius*/
+}
+
+.mat-radio-group{
+  display:flex ;
+  width:100%;
+  justify-content: space-between;
+}
+
+.colortextbox{
+  margin: 20px 0 0 0;
+}
